--- a/templates/hookclean.py.erb
+++ b/templates/hookclean.py.erb
@@ -6,14 +6,18 @@ parser = OptionParser()
 parser.add_option('-c',dest="ci_base",help="CI API Base URL (include trailing slash)")
 parser.add_option('-r',dest="repos",help="Repo Name")
 parser.add_option('-b',dest="base_dir",help="Base directory of repos (include trailing slash)")
+parser.add_option('-t',dest="branch",help="Branch name to check results on")
 (options, args) = parser.parse_args()
 build_results = {}
 
-print("Retrieving build info for " + options.repos)
+print("Retrieving build info for branch " + options.branch + " in " + options.repos)
 data = urllib.request.urlopen(str(options.ci_base + options.repos))
 reader = codecs.getreader("utf-8")
 parsed = json.load(reader(data))
 for j in parsed['logs']:
+    # use first build for the branch of interest 
+    if j['ref'] != options.branch:
+        continue
     # if the last test shows 100% coverage, we're done
     if j['coverage'] == 100:
         print("Coverage for " + options.repos + " 100%")
@@ -24,6 +28,7 @@ for j in parsed['logs']:
         # take the first build which has any unit test results
         if (len(parsed_results['units']) > 0):
             build_results = parsed_results['units']
+            print("Cleaning with build results " + j['uuid'])
             break
 to_remove = []
 for f in build_results:
