--- a/templates/update_capitains_repos.rb.erb
+++ b/templates/update_capitains_repos.rb.erb
@@ -49,11 +49,18 @@ unless (@disable)
     if (response.code == '200')
       json = JSON.parse(response.body)
       new_release = json[0]['tag_name']
-      if (! current_releases[r['cibase']] || current_releases[r['cibase']] != new_release) 
+      if (! current_releases[r['cibase']] || current_releases[r['cibase']] != new_release || @force) 
         debug_print("Updating #{r['cibase']} to #{new_release}")
-        archive = json[0]['assets'][0]['browser_download_url']
-        shell("rm -fr #{WORKDIR}/#{r['name']} && mkdir #{WORKDIR}/#{r['name']} && curl -L -o #{WORKDIR}/#{r['name']}/release.tar.gz #{archive} && cd #{WORKDIR}/#{r['name']} && tar -xzf release.tar.gz")
-        shell("rsync -Pav --delete  #{WORKDIR}/#{r['name']}/ #{DATA_ROOT}/#{r['name']}/")
+        if json[0]['assets'].size > 0
+          archive = json[0]['assets'][0]['browser_download_url']
+          shell("rm -fr #{WORKDIR}/#{r['name']} && mkdir #{WORKDIR}/#{r['name']} && curl -L -o #{WORKDIR}/#{r['name']}/release.tar.gz #{archive} && cd #{WORKDIR}/#{r['name']} && tar -xzf release.tar.gz")
+          shell("rsync -Pav --delete  #{WORKDIR}/#{r['name']}/ #{DATA_ROOT}/#{r['name']}/")
+        else
+          archive = json[0]['zipball_url']
+          shell("rm -fr #{WORKDIR}/#{r['name']} && mkdir #{WORKDIR}/#{r['name']} && curl -L -o #{WORKDIR}/#{r['name']}/release.zip #{archive} && cd #{WORKDIR}/#{r['name']} && unzip release.zip")
+          zip_base_dir = r['cibase'].sub(/\//, '-')
+          shell("rsync -Pav --delete  #{WORKDIR}/#{r['name']}/#{zip_base_dir}*/ #{DATA_ROOT}/#{r['name']}/")
+        end
         current_releases[r['cibase']] = new_release
         new_data = true
       else
